# 01-Mouse_Inverse_BenchMarking

./: .gitignore  README.md
Data/KinematicData/: MOUSE_RUNWAY.txt  MOUSE_TREADMILL.txt  RAT_TREADMILL.txt
Results/: hindLimbComplete_test.txt
conf_sample/cpg_gate/: cpg_interneurons.txt  cpg_interneurons_off.txt  cpg_interneurons_off_cpg.txt  cpg_interneurons_off_cst.txt  cpg_parameters.txt  current.txt
conf_sample/fullReflex_gate/: geyer.txt  geyer_update.txt  param1.txt  param10.txt  param2.txt  param3.txt  param4.txt  param5.txt  param6.txt  param7.txt  param8.txt  param9.txt  version52_1.3.txt  version52_i.txt  version52_ii.txt
conf_sample/launching_gate/: 1.3  1.3_jw_notf  1.3_jw_tf
conf_sample/motor_primitives/MP_test/: 0_derivative.txt  1.txt  2_derivative.txt  3_derivative.txt  weights.txt
conf_sample/scheme/: parameters1.txt  parameters2.txt  parameters4.txt
conf_sample/settings/: settings.xml  settings_formento.xml  settings_jw_tf.xml  settings_pendulum.xml
conf_sample/settings/examples/: settings.xml  settings_cpg.xml  (+2 more)
conf_sample/systematic_search/: combinaisonStudy  hybridStudy  hybridStudy2  hybridStudy4  hybridStudy6  noiseMuscleStudy  test
controllers/conveyer/: conveyer.cpp  conveyer.hh
controllers/ekerbergMouse_wbt8/: Makefile  ekerbergMouse_wbt8
controllers/hindLimb/: hindLimb.cpp  hindLimb.hh
controllers/mainEkerbergMouse/: main.cc
controllers/sources/: EkerbergControl.cc  EkerbergControl.hh  EkerbergMouse.cc  EkerbergMouse.hh
libnmm/: INPUT.txt  INPUT.txt.save  Makefile  Makefile.include  README.md  TODO  compile  configure  copy2all  pullAll  pushAll
libnmm/efx/: CppEvents.cpp  CppEvents2.cpp  CppEvents3.cpp  Fsm.cpp  SimpleStateMachine.cpp  StopWatch2.cpp  rungekutta.h
libnmm/sml/: Makefile.include  sml-5.0.pc  sml.hh  sml.pc.in
libnmm/sml/spinalDynamics/: CMakeLists.txt  Readme.md  install.txt  spinalDynamics.pc.in
libnmm/sml/spinalDynamics/doc/: HowToOpenSim.md
libnmm/sml/spinalDynamics/dynamics/: CMakeLists.txt
libnmm/sml/spinalDynamics/dynamics/demo/: CMakeLists.txt  main.cc
libnmm/sml/spinalDynamics/dynamics/include/dynamics/: config.hh  controller.hh  indexed.hh  io_system.hh  link.hh  link_library.hh  network.hh  network_factory.hh  network_manager.hh  state.hh  system.hh
libnmm/sml/spinalDynamics/dynamics/lib/: CMakeLists.txt  controller.cc  controller.hh  indexed.cc  indexed.hh  io_system.cc  io_system.hh  link.cc  link.hh  link_library.cc  link_library.hh  network.cc  network.hh  network_factory.hh  network_manager.cc  network_manager.hh  state.cc  state.hh  system.cc  system.hh
libnmm/sml/spinalDynamics/dynamics/test/: CMakeLists.txt  link_test.cc  main.cc  network_manager_test.cc  state_test.cc  system_test.cc
libnmm/sml/spinalDynamics/opensim-modeller/: CMakeLists.txt
libnmm/sml/spinalDynamics/opensim-modeller/demo/: CMakeLists.txt  main.cc
libnmm/sml/spinalDynamics/opensim-modeller/lib/: CMakeLists.txt  controller.cc  controller.hh  model.cc  model.hh
libnmm/sml/spinalDynamics/opensim-modeller/models/: 10dof_18musc.osim  10dof_18musc_config.yaml  10dof_18musc_param.txt  1dof_2musc.osim  1dof_2musc_config.yaml  6dof_9musc.osim  6dof_9musc_config.yaml  6dof_9musc_param.txt  cube_config.yaml
libnmm/sml/spinalDynamics/opensim-modeller/test/: CMakeLists.txt  main.cc
libnmm/sml/spinalDynamics/setting-manager/: CMakeLists.txt  Readme.md
libnmm/sml/spinalDynamics/setting-manager/demo/: main.cc
libnmm/sml/spinalDynamics/setting-manager/include/setting-manager/: parameters.hh  settings.hh
libnmm/sml/spinalDynamics/setting-manager/lib/: CMakeLists.txt  parameters.cc  settings.cc  settings.hh
libnmm/sml/spinalDynamics/setting-manager/test/: CMakeLists.txt  main.cc  parameters_test.cc  parameters_test.txt  settings_test.cc
libnmm/sml/spinalDynamics/timer/: CMakeLists.txt
libnmm/sml/spinalDynamics/timer/cmake_helper_functions/: cmake_functions.txt
libnmm/sml/spinalDynamics/timer/demo/: CMakeLists.txt  main.cc
libnmm/sml/spinalDynamics/timer/lib/: CMakeLists.txt  clock.cc  clock.hh
libnmm/sml/spinalDynamics/timer/test/: CMakeLists.txt
mf/: optimization.mf  webots-common-physics.mf  webots-common.mf  webots-controller.mf  webots-plugin.mf  webots8-version.mf
worlds/: .852_fullMouse.wbproj  .852_fullMouse_v2.1.1.wbproj  852_fullMouse.wbt  852_fullMouse_v2.1.1.wbt
(+133 files in other folders)
